--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "kisskh-stremio-addon",
-  "version": "1.0.0",
+  "version": "1.1.5",
+  "description": "KissKH Stremio Addon",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "vercel-build": "npm install"
@@ -16,5 +18,8 @@
     "puppeteer-extra": "3.3.6",
     "puppeteer-extra-plugin-stealth": "2.11.2",
     "stremio-addon-sdk": "^1.6.10"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
