--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.js" }],
-  "headers": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Cache-Control", "value": "s-maxage=3600, stale-while-revalidate=60" }
-      ]
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
     }
   ]
 }
