--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-{
-  "name": "kisskh-stremio-addon",
-  "version": "1.2.6",
+{  "name": "kisskh-stremio-addon",
+  "version": "1.3.0",
   "description": "KissKH Stremio Addon",
   "main": "index.js",
   "scripts": {
