--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
-{  "name": "kisskh-stremio-addon",
-  "version": "1.3.0",
+{
+  "name": "kisskh-stremio-addon",
+  "version": "1.3.1",
   "description": "KissKH Stremio Addon",
   "main": "index.js",
   "scripts": {
@@ -7,6 +8,7 @@
     "vercel-build": "npm install"
   },
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "@vercel/blob": "1.0.1",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
