--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
   "name": "kisskh-stremio-addon",
-  "version": "1.3.1",
+  "version": "1.3.6",
   "description": "KissKH Stremio Addon",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "vercel-build": "npm install"
-  },
-  "dependencies": {
+  },  "dependencies": {
     "@octokit/rest": "19.0.5",
     "@vercel/blob": "1.0.1",
     "axios": "^1.9.0",
+    "chrome-aws-lambda": "~6.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^4.21.2",
     "lru-cache": "^7.14.1",
-    "puppeteer": "^24.9.0",
-    "puppeteer-extra": "3.3.6",
-    "puppeteer-extra-plugin-stealth": "2.11.2",
+    "puppeteer-core": "~6.0.0",
     "stremio-addon-sdk": "^1.6.10"
   },
   "engines": {
