--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "vercel-build": "npm install"
-  },  "dependencies": {
+  },
+  "dependencies": {
     "@octokit/rest": "19.0.5",
     "@vercel/blob": "1.0.1",
     "axios": "^1.9.0",
