--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.21.2",
     "lru-cache": "^7.14.1",
     "puppeteer-core": "~6.0.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "stremio-addon-sdk": "^1.6.10"
   },
   "engines": {
