--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "@octokit/rest": "19.0.5",
     "@vercel/blob": "1.0.1",
     "axios": "^1.9.0",
-    "chrome-aws-lambda": "~6.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "lru-cache": "^7.14.1",
-    "puppeteer-core": "~6.0.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer": "^24.9.0",
+    "puppeteer-extra": "3.3.6",
+    "puppeteer-extra-plugin-stealth": "2.11.2",
     "stremio-addon-sdk": "^1.6.10"
   },
   "engines": {
