--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kisskh-stremio-addon",
-  "version": "1.3.6",
+  "version": "2.0.1",
   "description": "KissKH Stremio Addon",
   "main": "index.js",
   "scripts": {
@@ -8,18 +8,17 @@
     "vercel-build": "npm install"
   },
   "dependencies": {
-    "@octokit/rest": "19.0.5",
-    "@vercel/blob": "1.0.1",
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.2",
-    "lru-cache": "^7.14.1",
-    "puppeteer": "^24.9.0",
-    "puppeteer-extra": "3.3.6",
-    "puppeteer-extra-plugin-stealth": "2.11.2",
-    "stremio-addon-sdk": "^1.6.10"
+  "axios": "^1.9.0",
+  "dotenv": "^16.4.5",
+  "express": "^4.21.2",
+  "lru-cache": "^7.14.1",
+  "puppeteer": "^24.9.0",
+  "puppeteer-extra": "3.3.6",
+  "puppeteer-extra-plugin-stealth": "2.11.2",
+  "puppeteer-extra-plugin-anonymize-ua": "2.4.6",
+  "puppeteer-extra-plugin-user-preferences": "^2.4.1",
+  "puppeteer-extra-plugin-block-resources": "^2.2.7",
+  "stremio-addon-sdk": "^1.6.10"
   },
   "engines": {
     "node": ">=14.0.0"
