--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "vercel-build": "npm install"
   },
   "dependencies": {
+  "@octokit/rest": "^20.0.0",
   "axios": "^1.9.0",
   "dotenv": "^16.4.5",
   "express": "^4.21.2",
